M-AGE # 13- UNSTABLE - Path changes implementation 1

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -560,53 +560,54 @@
 	#TRAIT_TEC_GENE_MALLEABLE_EFFECT:0 "Reduces the cost of §HStandard Traits§! by §G1§!, down to §Y0§!."
 
  # --------------- T2
-	# Main
-		trait_tec_gene_main_1:0 "§YTailored Genetics§! (§GI§!)"
-		trait_tec_gene_main_1_desc:0 "§LThis species is aspiring to create a perfectly tailored and maintained genetic code, which may allow it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-		trait_tec_gene_main_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+ # Misc text
+	tec_genetic_trait_t1:0 "§HImproved Genetic Trait§!"
+	tec_genetic_trait_t2:0 "§HEnhanced Genetic Trait§!"
+	tec_genetic_trait_t3:0 "§HPerfected Genetic Trait§!"
+ # /
+ # Main
+	trait_tec_gene_main_1:0 "§YTailored Genetics§! (§GI§!)"
+	trait_tec_gene_main_1_desc:0 "§LThis species is aspiring to create a perfectly tailored and maintained genetic code, which may allow it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+	trait_tec_gene_main_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-		trait_tec_gene_main_2:0 "§YImproved Genetics§! (§YII§!)"
-		trait_tec_gene_main_2_desc:0 "§LThis species possess the basis for a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-		trait_tec_gene_main_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_main_2:0 "§YImproved Genetics§! (§YII§!)"
+	trait_tec_gene_main_2_desc:0 "§LThis species possess the basis for a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+	trait_tec_gene_main_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-		trait_tec_gene_main_3:0 "§YGenetic Perfection§! (§HIII§!)"
-		trait_tec_gene_main_3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
-		trait_tec_gene_main_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
-	# /
+	trait_tec_gene_main_3:0 "§YGenetic Perfection§! (§HIII§!)"
+	trait_tec_gene_main_3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
+	trait_tec_gene_main_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-	# Brain
-		trait_tec_gene_research_1:0 "§YGenius§! (§GI§!)"
-		trait_tec_gene_research_1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-		trait_tec_gene_research_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
+	trait_tec_gene_research_1:0 "§YGenius§! (§GI§!)"
+	trait_tec_gene_research_1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_research_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
 
-		trait_tec_gene_research_2:0 "§YGenius§! (§YII§!)"
-		trait_tec_gene_research_2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-		trait_tec_gene_research_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
+	trait_tec_gene_research_2:0 "§YGenius§! (§YII§!)"
+	trait_tec_gene_research_2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_research_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
 
-		trait_tec_gene_research_3:0 "§YGenius§! (§HIII§!)"
-		trait_tec_gene_research_3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
-		trait_tec_gene_research_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_research_3:0 "§YGenius§! (§HIII§!)"
+	trait_tec_gene_research_3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_research_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-		#leader_trait_tec_gene_research:0 ""
-		#leader_trait_tec_gene_research_desc:0 "§L.§!"
-	# /
+	#leader_trait_tec_gene_research:0 ""
+	#leader_trait_tec_gene_research_desc:0 "§L.§!"
 
 	# Unity
-		trait_tec_gene_unity_1:0 "§YResolved§! (§GI§!)"
-		trait_tec_gene_unity_1_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-		trait_tec_gene_unity_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
+	trait_tec_gene_unity_1:0 "§YResolved§! (§GI§!)"
+	trait_tec_gene_unity_1_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+	trait_tec_gene_unity_1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
 
-		trait_tec_gene_unity_2:0 "§YResolved§! (§YII§!)"
-		trait_tec_gene_unity_2_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-		trait_tec_gene_unity_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
+	trait_tec_gene_unity_2:0 "§YResolved§! (§YII§!)"
+	trait_tec_gene_unity_2_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+	trait_tec_gene_unity_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
 
-		trait_tec_gene_unity_3:0 "§YResolved§! (§HIII§!)"
-		trait_tec_gene_unity_3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-		trait_tec_gene_unity_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_unity_3:0 "§YResolved§! (§HIII§!)"
+	trait_tec_gene_unity_3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+	trait_tec_gene_unity_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-		#leader_trait_tec_gene_unity:0 ""
-		#leader_trait_tec_gene_unity_desc:0 "§L.§!"
-	# /
+	#leader_trait_tec_gene_unity:0 ""
+	#leader_trait_tec_gene_unity_desc:0 "§L.§!"
 
 	# Fertility
 		trait_tec_gene_fertile_1:0 "§YFecund§! (§GI§!)"
@@ -923,20 +924,27 @@
 	trait_tec_cyborg_research_desc:0 "§La.§!"
  # /
  # Misc text
-	tec_only_1_cybernetic_mainframe_trait:0 "Only one Cybernetic Mainframe can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_2_cybernetic_mainframe_trait:0 "This species has already augmented its body with a Cybernetic Mainframe."
+	tec_cybernetic_augmentation:0 "§CCybernetic Augmentation§!"
+	tec_cybernetic_augmentation_mainframe:0 "§CCybernetic Augmentation - Mainframe§!"
+	tec_cybernetic_augmentation_cortex:0 "§CCybernetic Augmentation - Cortex§!"
+	tec_cybernetic_augmentation_internal:0 "§CCybernetic Augmentation - Internal§!"
+	tec_cybernetic_augmentation_external:0 "§CCybernetic Augmentation - External§!"
+	tec_cybernetic_augmentation_deck:0 "§CCybernetic Augmentation - OS Deck§!"
 
-	tec_only_1_cybernetic_cortex_trait:0 "Only one Cortex implant can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_2_cybernetic_cortex_trait:0 "This species has already cybernetically replaced most of its brain with Cortex implants."
+	tec_only_1_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only one Cybernetic Mainframe can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_2_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with a Cybernetic Mainframe.§!"
 
-	tec_only_1_cybernetic_internal_trait:0 "Only one Internal implant can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_2_cybernetic_internal_trait:0 "This species has already cybernetically augmented its body with Internal implants."
+	tec_only_1_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Cortex implant can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_2_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically replaced most of its brain with Cortex implants.§!"
 
-	tec_only_1_cybernetic_external_trait:0 "Only one External implant can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_2_cybernetic_external_trait:0 "This species has already cybernetically augmented its body with External implants."
+	tec_only_1_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Internal implant can be added to this species. Developing new cybernetic advancements can allow further modifications."
+	tec_only_2_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with Internal implants.§!"
 
-	tec_only_1_cybernetic_deck_trait:0 "Only one Operating System Deck can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_2_cybernetic_deck_trait:0 "This species has already cybernetically augmented its personality with Operating System Decks."
+	tec_only_1_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! External implant can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_2_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with External implants.§!"
+
+	tec_only_1_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Operating System Deck can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_2_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its personality with Operating System Decks.§!"
  # /
  # --------------- Mainframe Endoskeletal implants
 	# Tier 1
@@ -1018,9 +1026,9 @@
 	trait_tec_cyborg_internal_intergumentary_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_internal_intergumentary_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_internal_adrenaline:0 "Internal Retrofitters"
-	trait_tec_cyborg_internal_adrenaline_desc:0 "§LSmall deposits of useful repair nanodrones are distributed around the body, allowing a perfect maintenance and repair tasks of any enhancement, implant or the organic body itself.§!"
-	trait_tec_cyborg_internal_adrenaline_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_internal_retrofit:0 "Internal Retrofitters"
+	trait_tec_cyborg_internal_retrofit_desc:0 "§LSmall deposits of useful repair nanodrones are distributed around the body, allowing a perfect maintenance and repair tasks of any enhancement, implant or the organic body itself.§!"
+	trait_tec_cyborg_internal_retrofit_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_adrenaline:0 "Adrenal Boosters"
 	trait_tec_cyborg_internal_adrenaline_desc:0 "§LTODO ASCENSION.§!"
@@ -1038,6 +1046,11 @@
 	trait_tec_cyborg_internal_maintenance:0 "Personal Retrofitters"
 	trait_tec_cyborg_internal_maintenance_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_internal_maintenance_effect:0 "§YTODO ASCENSION§!"
+
+	# Bonuses for leaders, armies after death can become zomborgs
+	trait_tec_cyborg_internal_vital:0 "Autonomous Vital Support"
+	trait_tec_cyborg_internal_vital_desc:0 "§LTODO ASCENSION.§!"
+	trait_tec_cyborg_internal_vital_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_internal_a:0 "TODO ASCENSION"
 	trait_tec_cyborg_internal_a_desc:0 "§LTODO ASCENSION.§!"
@@ -1065,32 +1078,32 @@
 	trait_tec_cyborg_external_servos_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_external_multilimb:0 "Supplementary Extremities"
-	trait_tec_cyborg_external_multilimb_desc:0 "§LAdditional interchangeable and customizable extremities are attached to this species morphology, generally varying in size and function, reinforcing the day-to-day proficiency; Sometimes seen as an oddity, sometimes as a monstrosity, but utility is undeniable.§!"
+	trait_tec_cyborg_external_multilimb_desc:0 "§LAdditional interchangeable and customizable extremities are attached to this species morphology, generally varying in size and function, reinforcing the day-to-day proficiency; Sometimes perceived as an oddity, sometimes as a monstrosity, but with undeaniable utility.§!"
 	trait_tec_cyborg_external_multilimb_effect:0 "§YTODO ASCENSION§!"
 	# Extralimbs (+10% resources, -5% happiness)
 
  # /
  # --------------- OS Deck Implants
 	# Vanilla rescued
-	trait_tec_cyborg_deck_loyalty:0 "Loyalty Deck"
+	trait_tec_cyborg_deck_loyalty:0 "Loyal-IST Deck"
 	trait_tec_cyborg_deck_loyalty_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_deck_loyalty_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_deck_trading:0 "Trading Algorythms"
+	trait_tec_cyborg_deck_trading:0 "U-Trade Lite Deck"
 	trait_tec_cyborg_deck_trading_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_deck_trading_effect:0 "§YTODO ASCENSION§!"
 
 	# T2
 	trait_tec_cyborg_deck_stappled:0 "Personality Nullifier"
-	trait_tec_cyborg_deck_stappled_desc:0 "§LAggressive modifications on neural processors or tissue completely nullifies the subject personality and negates any possible agency, subduing the individual to a total obedience, generally paired with lack of self preservation and complete dedication to the workplace, regardless of basic necessities or maintenance.§!"
+	trait_tec_cyborg_deck_stappled_desc:0 "§LAggressive modifications on neural exchangers, automatically controlled via internal OS module, completely nullifies the subject personality and negates any possible agency, subduing the individual to total obedience, generally paired with lack of self preservation and complete dedication to assigned tasks, regardless of necessity or maintenance.§!"
 	trait_tec_cyborg_deck_stappled_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_deck_servient:0 "Servility Deck"
-	trait_tec_cyborg_deck_servient_desc:0 "§LOverwriting certain parts of the user neural connections, this deck ensures the complete subservience, loyalty and fervency towards authority and implanted ideals.§!"
+	trait_tec_cyborg_deck_servient:0 "Servient OS Deck"
+	trait_tec_cyborg_deck_servient_desc:0 "§LOverwriting certain parts of the user neural connections, this deck implants an Operating System module that ensures the complete subservience and fervency towards authority and implanted ideals.§!"
 	trait_tec_cyborg_deck_servient_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_deck_automodding:0 "Multi-Deck"
-	trait_tec_cyborg_deck_automodding_desc:0 "§LA coalescence of diverse skills and knowledge database is integrated in this deck, allowing the users to immediately develop capacities for near any application conceivable.§!"
+	trait_tec_cyborg_deck_automodding:0 "Multi-OS Deck"
+	trait_tec_cyborg_deck_automodding_desc:0 "§LA coalescence of diverse skills and knowledge database is integrated in this deck Operating System module, allowing the immediate development of capacities for near any application conceivable.§!"
 	trait_tec_cyborg_deck_automodding_effect:0 "§YTODO ASCENSION§!"
 # /
 
