fix: ai fixes and performance improvements

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -4079,3 +4079,6 @@ l_english:
 	#"Consumer Logistics Institute"
 	#building_factory_3:0 "Industrial Fabrication Complex"
 	#building_factory_3_desc:0 "This managing center has the important task of assigning the production and asignment of complex goods used by advanced industries around the planet, researching new transportation and distribution systems."
+
+
+	TEC_RULER_JOB_TRIGGER_DYNAMIC: "[TEC_RULER_JOB_TRIGGER_DYNAMIC]"
