feat: mod support documentation and files auto gen and creed auth swaps

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -44,6 +44,10 @@
 	auth_direct_democratic:0 "Direct Democracy"
 	auth_direct_democratic_desc:0 "With people being directly involved in governing and deciding on policy initiatives, bureaucratic efficiency is increased and both social and economical development are accelerated."
 
+	auth_cyber_creed_direct_democratic: "Cyber Commune"
+	auth_cyber_creed_direct_democratic_desc: "A sacred assembly where every cybernetically enhanced citizen participates in the divine decision-making process, ensuring spiritual harmony through direct democracy."
+	concept_auth_cyber_creed_direct_democratic: "$auth_cyber_creed_direct_democratic$"
+
 	TEC_AUTH_DIRECT_DEMOCRATIC_TYPES: "['concept_tec_authority_type_democratic_type']"
 	TEC_AUTHORITY_ELECTION_DIRECT_DEMOCRATIC:0 "§HElection Type:§!\n- Holds an election every §Y5§! years to select a new Ruler.\n- Re-elections are not allowed.\n- Can §RNOT DO§! emergency elections."
 	TEC_AUTH_DIRECT_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\n- All the councilors will gain §G100§! £mod_councilor_skill_add£ §YExperience§! after finishing an election, and the country will gain §G+25%§! §Y$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$§! during §Y2§! years.\n- This effect is disabled for emergency elections."
@@ -66,6 +70,10 @@
 
 	auth_tec_theocracy:0 "Theocracy"
 	auth_tec_theocracy_desc:0 "Belief and administration united, this kind of government commands in the name of the divinity; the maximum authority is recognized as the direct manifestation of a deity."
+
+	auth_cyber_creed_tec_theocracy: "Augmented Ecclesiocracy"
+	auth_cyber_creed_tec_theocracy_desc: "A theocratic regime where religious leaders, enhanced with sacred cybernetics, guide the faithful through divine governance and spiritual enlightenment."
+	concept_auth_cyber_creed_tec_theocracy: "$auth_cyber_creed_tec_theocracy$"
 
 	TEC_AUTH_THEOCRACY_TYPES: "['concept_tec_authority_type_autocratic'], ['concept_tec_authority_type_dictatorial_type']"
 	TEC_AUTHORITY_ELECTION_THEOCRACY:0 "§HElection Type:§!\n- Holds an election upon ruler death to select a new Ruler.\n- Can §YDO§! emergency elections."
@@ -91,11 +99,20 @@
 	auth_tec_patrocorporate:0 "Patrimonial Corporation"
 	auth_tec_patrocorporate_desc:0 "This kind of government is controlled by a massive commercial enterprise, owned by a family with a established line of succession mainly composed of the principal shareholder offspring, that has completely supplanted the role of the state."
 
+	auth_cyber_creed_tec_patrocorporate: "Hereditary Cyber Consortium"
+	auth_cyber_creed_tec_patrocorporate_desc: "A corporate entity governed by sacred familial succession, with leaders enhanced by cybernetics to uphold divine and economic mandates."
+	concept_auth_cyber_creed_tec_patrocorporate: "$auth_cyber_creed_tec_patrocorporate$"
+
 	TEC_AUTH_PATROCORPORATE_TYPES: "['concept_tec_authority_type_autocratic'], ['concept_tec_authority_type_imperial'], ['concept_tec_authority_type_corporate_type']"
 
 	auth_tec_ai:0 "AI Administration"
 	auth_tec_ai_desc:0 "This society is not directly governed by a corp of politics, but a continuously evolving and efficient Artificial Intelligence, composed by a sophisticated computing network, controlling most of the aspect of it; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
 	TEC_AUTH_AI_TYPES: "['concept_tec_authority_type_ai_auth_type']"
+
+	auth_cyber_creed_tec_ai: "Holy AI Stewardship"
+	auth_cyber_creed_tec_ai_desc: "A divine governance model where a super intelligent AI, in concert with augmented faithful, oversees the spiritual and technological welfare of the empire."
+	concept_auth_cyber_creed_tec_ai: "$auth_cyber_creed_tec_ai$"
+
 
 	TEC_AUTH_AI_RULER_REPLACE:0 "§HRuler:§!\n-The Ruler is replaced with an ['concept_tec_ai_node_icon'], an immortal §YMechanical Unit§!, which cannot gain experience naturally, needing ['concept_tec_sr_tec_ai_power'] for upkeep and to gain experience"
 	TEC_AUTH_AI_RULER_JOBS_REPLACE:0 "§HJob Replace:§!\n- ['concept_tec_ruler_job_politician_plural_icon'] are replaced by ['concept_tec_ruler_job_tec_ai_computator_plural_icon'] (or with ['concept_tec_ruler_job_tec_ai_high_ordinator_plural_icon'] for §YSpiritualists§!)\n- ['concept_tec_building_bureaucratic_1_icon'] are replaced by ['concept_tec_building_tec_aiauth_1_icon'], providing ['concept_tec_specialist_job_tec_ai_operator_plural_icon'] (or with ['concept_tec_specialist_job_tec_ai_ordinator_plural_icon'] for §YSpiritualists§!)"
@@ -105,6 +122,11 @@
 	auth_tec_ai_corporate:0 "AI Corporation"
 	auth_tec_ai_corporate_desc:0 "This mega-corporation is not directly governed by a corp of CEOs or business heads, but overseen and tracked by a super efficient Artificial Intelligence, which use a part of the transactional network as its computing network, controlling each economic and vital aspects of the citizens and administration; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
 	TEC_AUTH_AI_CORPORATE_TYPES: "['concept_tec_authority_type_ai_auth'], ['concept_tec_authority_type_corporate_type']"
+
+
+	auth_cyber_creed_tec_ai_corporate: "AugmentSacred AI Holdings"
+	auth_cyber_creed_tec_ai_corporate_desc: "A divine corporate entity led by a super intelligent AI, working in concert with augmented believers to achieve a sacred synthesis of economic prowess and spiritual fulfillment."
+	concept_auth_cyber_creed_tec_ai_corporate: "$auth_cyber_creed_tec_ai_corporate$"
 
 	# Regular Hives
 	auth_hive_mind:0 "Hive Mind"
