fix: leader trait adjustments and overall bugfixes

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -18,9 +18,9 @@
 # /
 
 # Vanilla loc overwrites
-	councilor_anglers_custom_modifier_desc:0 "- $tec_loc_food$ (or £minerals£) from £job_angler£ $job_angler_plural$: §G+$@councilor_anglers_angler_food_bonus$§!\n$tec_loc_consumer_goods$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_anglers_pearl_diver_consumer_goods_bonus$§!"
+	councilor_anglers_custom_modifier_desc:0 "- $tec_loc_food$ (or £minerals£) from £job_angler£ $job_angler_plural$: §G+$@councilor_anglers_angler_food_bonus$§!\n- $tec_loc_consumer_goods$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_anglers_pearl_diver_consumer_goods_bonus$§!"
 	councilor_barbaric_despoilers_custom_modifier_desc:0 "- £empire_sprawl£ $EMPIRE_SIZE$ from $mod_base_pop_category_slave$: §G-2%§!"
-	councilor_corporate_anglers_custom_modifier_desc:0 "- $tec_loc_trade_value$ from £job_angler£ $job_angler_plural$: §G+$@councilor_corporate_anglers_angler_trade_value_bonus$§!\n$tec_loc_trade_value$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_corporate_anglers_pearl_diver_trade_value_bonus$§!"
+	councilor_corporate_anglers_custom_modifier_desc:0 "- $tec_loc_trade_value$ from £job_angler£ $job_angler_plural$: §G+$@councilor_corporate_anglers_angler_trade_value_bonus$§!\n- $tec_loc_trade_value$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_corporate_anglers_pearl_diver_trade_value_bonus$§!"
 	councilor_corporate_hedonism_custom_modifier_desc:0 "- $mod_planet_entertainers_trade_value_produces_add$: §G+$@councilor_corporate_hedonism_entertainer_trade_value$§!"
 	councilor_criminal_heritage_custom_modifier_desc:0 "- £trade_value£ $MOD_BRANCH_OFFICE_CRIMINAL_SYNDICATE_VALUE_ADD$ from $mod_base_planet_criminals$: §G+$@councilor_criminal_heritage_bonus$§!"
  	councilor_death_cult_custom_modifier_desc:0 "- §YSacrificial Edict§! Effect: §G+2%§!"
