--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -233,7 +233,7 @@
 	tec_loc_leader_icon:0 "£tec_leader£"
 	tec_loc_leader:0 "$tec_loc_leader_icon$ Leader"
 	tec_loc_leaders:0 "$tec_loc_leader_icon$ Leaders"
-	tec_loc_leader_lifespan:0 "$MOD_LEADER_LIFESPAN$"
+	tec_loc_leader_lifespan:0 "$MOD_LEADER_LIFESPAN_ADD$"
 	tec_loc_all_leaders:0 "£official£ £scientist£ £commander£"
 	tec_loc_leader_official:0 "£official£ Official"
 	tec_loc_leader_commander:0 "£commander£ Commander"
