--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -120,7 +120,7 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 	tec_cw_auth_bonus_desc:0 ", §Y$tec_loc_stability$§!"
 	tec_cw_phobe_bonus_desc:0 "§Y$mod_planet_jobs_tec_main_species_produces_mult$§!"
 	tec_cw_phile_bonus_desc:0 ", §Y$MOD_POP_GROWTH_FROM_IMMIGRATION$§!"
-	tec_cw_green_bonus_desc:0 ", §Y$mod_planet_structures_upkeep_mult$ Reduction§!"
+	tec_cw_ecologist_bonus_desc:0 ", §Y$mod_planet_structures_upkeep_mult$ Reduction§!"
 	tec_cw_ind_bonus_desc:0 ", §Y$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$§!"
 	tec_cw_comp_bonus_desc:0 ", §Y$mod_pop_job_trade_mult$§!"
 	tec_cw_coop_bonus_desc:0 ", §Y$tec_loc_amenities$§!"
