feat: civic group checks with inlines, updated and improved civic concepts with civics in groups

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -192,67 +192,67 @@
 
 # Origins - not including desc since that behaves wonky with origin localization load order
  # PD
- origin_techno_world: "[PD Uniques] The Children of Unit 04"
+ origin_techno_world: "[[PD Uniques] The Children of Unit 04"
  origin_techno_world_desc: ""
- origin_pd_shroud: "[PD Shroud] Shroud-Touched"
+ origin_pd_shroud: "[[PD Shroud] Shroud-Touched"
  origin_pd_shroud_desc: ""
- origin_pd_hive: "[PD] Infecting Planetary Hive"
+ origin_pd_hive: "[[PD] Infecting Planetary Hive"
  origin_pd_hive_desc: ""
- origin_pd_radiotrophic_mutants: "[PD Exotics] Radiothrophic Mutants"
+ origin_pd_radiotrophic_mutants: "[[PD Exotics] Radiothrophic Mutants"
  origin_pd_radiotrophic_mutants_desc: ""
- origin_pd_scrapyard_world: "[PD Uniques] Another Xeno's Trash"
+ origin_pd_scrapyard_world: "[[PD Uniques] Another Xeno's Trash"
  origin_pd_scrapyard_world_desc: ""
- origin_pd_hycean_aquatic: "[PD Exotics] Hycean Deep Dwellers"
+ origin_pd_hycean_aquatic: "[[PD Exotics] Hycean Deep Dwellers"
  origin_pd_hycean_aquatic_desc: ""
- origin_pd_tree_of_life: "[PD] Megaflora Tree of Life"
+ origin_pd_tree_of_life: "[[PD] Megaflora Tree of Life"
  origin_pd_tree_of_life_desc: ""
 
  # Origins Expanded
- origin_psionic_abilities: "[OEXP] Psionic Abilities"
+ origin_psionic_abilities: "[[OEXP] Psionic Abilities"
  origin_psionic_abilities_desc: ""
- origin_resort_world: "[OEXP] Resort World"
+ origin_resort_world: "[[OEXP] Resort World"
  origin_resort_world_desc: ""
- origin_disharmonious_unity: "[OEXP] Disharmonious Unity"
+ origin_disharmonious_unity: "[[OEXP] Disharmonious Unity"
  origin_disharmonious_unity_desc: ""
- origin_technological_unity: "[OEXP] Technological Unity"
+ origin_technological_unity: "[[OEXP] Technological Unity"
  origin_technological_unity_desc: ""
- origin_megacorp_unification: "[OEXP] Megacorp Unification"
+ origin_megacorp_unification: "[[OEXP] Megacorp Unification"
  origin_megacorp_unification_desc: ""
- origin_one_religion: "[OEXP] One Religion"
+ origin_one_religion: "[[OEXP] One Religion"
  origin_one_religion_desc: ""
- origin_way_to_peacefulness: "[OEXP] Way of Peacefulness"
+ origin_way_to_peacefulness: "[[OEXP] Way of Peacefulness"
  origin_way_to_peacefulness_desc: ""
- origin_unification_wars: "[OEXP] Unification Wars"
+ origin_unification_wars: "[[OEXP] Unification Wars"
  origin_unification_wars_desc: ""
 
  # Origins Extended
- originsextended_psi: "[OEXT] Shroud Touched"
+ originsextended_psi: "[[OEXT] Shroud Touched"
  originsextended_psi_desc: ""
- originsextended_cyb: "[OEXT] Cybernetic Manipulation"
+ originsextended_cyb: "[[OEXT] Cybernetic Manipulation"
  originsextended_cyb_desc: ""
- originsextended_core: "[OEXT] Dormant Core"
+ originsextended_core: "[[OEXT] Dormant Core"
  originsextended_core_desc: ""
- originsextended_infest: "[OEXT] Planetary Infestation"
+ originsextended_infest: "[[OEXT] Planetary Infestation"
  originsextended_infest_desc: ""
- originsextended_gaia: "[OEXT] Gaia"
+ originsextended_gaia: "[[OEXT] Gaia"
  originsextended_gaia_desc: ""
- originsextended_graveyard: "[OEXT] The Graveyard"
+ originsextended_graveyard: "[[OEXT] The Graveyard"
  originsextended_graveyard_desc: ""
- originsextended_starless: "[OEXT] Starless"
+ originsextended_starless: "[[OEXT] Starless"
  originsextended_starless_desc: ""
- originsextended_magnetica: "[OEXT] Magnetica"
+ originsextended_magnetica: "[[OEXT] Magnetica"
  originsextended_magnetica_desc: ""
 
  # Even More Origins
- origin_reliquary: "[EMO] Back to the Future"
+ origin_reliquary: "[[EMO] Back to the Future"
  origin_reliquary_desc: ""
- origin_hive: "[EMO] Ecosystem Integration"
+ origin_hive: "[[EMO] Ecosystem Integration"
  origin_hive_desc: ""
 
  # MEM
- origin_mem_from_the_ashes: "[MEM] From the Ashes"
+ origin_mem_from_the_ashes: "[[MEM] From the Ashes"
  origin_mem_from_the_ashes_desc: ""
- origin_mem_ceaseless_gaze: "[MEM] Ceaseless Gaze"
+ origin_mem_ceaseless_gaze: "[[MEM] Ceaseless Gaze"
  origin_mem_ceaseless_gaze_desc: ""
 # /
 
